--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "joi": "^17.6.0",
     "mongoose": "^6.3.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "validatorjs": "^3.22.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
